# python-cloudy

./: .cspell.json  .flake8  .gitignore  .travis.yml  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  MIGRATION-COMPLETE.md  PRE-COMMIT.md  QUICK-START.md  README.md  USAGE.md  ali  bootstrap.sh  dev-requirements.txt  fabfile.py  lint.sh  pyproject.toml  requirements.txt  setup.py  test.py  test.sh
.github/workflows/: test.yml
cfg/: defaults.cfg
cloudy/: .ansible-lint.yml  .yamllint.yml  README.md  TWO-PHASE-SETUP.md  USAGE.md  __init__.py  ansible.cfg  create-missing-tasks.py  create-missing-tasks.sh  demo.sh  fabfile.py  fix-sudo.yml  install-git-hooks.sh  precommit.sh  recipes.py  test-auth-flow.yml  test-runner.sh  test-simple-auth.yml  validate-yaml.py  validate.py
cloudy/aws/: __init__.py  ec2.py
cloudy/cfg/: defaults.cfg  dot_cloudy_example  pgbouncer.ini
cloudy/cfg/apache2/: apache2.conf  envvars.conf  ports.conf  site.conf
cloudy/cfg/docker/: daemon.json
cloudy/cfg/memcached/: memcached.conf
cloudy/cfg/nginx/: domain.conf  http.conf  https.conf  mime.types.conf  nginx.conf
cloudy/cfg/openvpn/: docker-systemd.cfg
cloudy/cfg/pgbouncer/: default-pgbouncer  pgbouncer.ini
cloudy/cfg/pgpool2/: default-pgpool2  pgpool.conf
cloudy/cfg/postgresql/: pg_hba.conf
cloudy/cfg/redis/: redis.conf
cloudy/cfg/supervisor/: child.conf  must_read.txt  site.conf  supervisord.conf
cloudy/db/: __init__.py  mysql.py  pgbouncer.py  pgis.py  pgpool.py  postgis.py  postgres.py  psql.py
cloudy/inventory/: example-comprehensive.yml  example-production.yml  hosts.yml  test-localhost.yml  test-recipes.yml  test-two-phase.yml  test.yml
cloudy/inventory/group_vars/: all.yml  database_servers.yml  web_servers.yml
cloudy/playbooks/recipes/: cache-server.yml  database-postgis-server.yml  database-server.yml  generic-server.yml  hardening.yml  load-balancer.yml  smart-server.yml  vpn-server.yml  web-server.yml
cloudy/playbooks/recipes/cache/: redis.yml
cloudy/playbooks/recipes/core/: base.yml  security.yml
cloudy/playbooks/recipes/db/: postgis.yml  psql.yml
cloudy/playbooks/recipes/lb/: nginx.yml
cloudy/playbooks/recipes/vpn/: openvpn.yml
cloudy/playbooks/recipes/www/: django.yml
cloudy/samples/: openvpn.txt
cloudy/srv/: __init__.py  cfg_cache_redis.example  cfg_db_mysql.example  cfg_db_postgis.example  cfg_generic_server.example  cfg_loadbalancer_nginx.example  cfg_standalone_server.example  cfg_vpn_server.example  cfg_web_server.example  dbserver.py  generic.py  postgresql.py  recipe_cache_redis.py  recipe_database_psql_gis.py  recipe_generic_server.py  recipe_generic_ubuntu.py  recipe_loadbalancer_nginx.py  recipe_standalone_server.py  recipe_vpn.py  recipe_vpn_server.py  recipe_webserver_django.py  webserver.py
cloudy/sys/: __init__.py  core.py  docker.py  etc.py  firewall.py  memcached.py  mount.py  openvpn.py  ports.py  postfix.py  python.py  redis.py  security.py  ssh.py  swap.py  timezone.py  user.py  vim.py
cloudy/tasks/db/mysql/: create-database.yml  create-user.yml  get-latest-version.yml  grant-privileges.yml  install-client.yml  install-server.yml  set-root-password.yml
cloudy/tasks/db/pgbouncer/: configure.yml  install.yml  set-user-password.yml
cloudy/tasks/db/postgis/: configure.yml  get-database-info.yml  get-latest-version.yml  install.yml
cloudy/tasks/db/postgresql/: change-user-password.yml  create-cluster.yml  create-database.yml  create-user.yml  delete-database.yml  delete-user.yml  dump-database.yml  get-installed-version.yml  get-latest-version.yml  grant-privileges.yml  install-client.yml  install-repo.yml  install.yml  list-databases.yml  list-users.yml  remove-cluster.yml
cloudy/tasks/services/memcached/: configure-memory.yml  configure-port.yml  install-dev.yml  install.yml
cloudy/tasks/services/redis/: configure-interface.yml  configure-memory.yml  configure-port.yml  install.yml
cloudy/tasks/services/vpn/: create-client.yml  docker-configure.yml  docker-install.yml  list-clients.yml  revoke-client.yml
cloudy/tasks/sys/core/: add-hosts.yml  configure-git.yml  detect-connection-state.yml  find-available-port.yml  git-init-etc.yml  hostname.yml  init.yml  install-common.yml  install-git.yml  install-postfix.yml  memory-usage.yml  mkdir.yml  safe-upgrade.yml  service-reload.yml  service-restart.yml  service-start.yml  service-stop.yml  set-editor.yml  smart-hardening.yml  system-info.yml  update.yml  upgrade.yml  validate-admin-access.yml  verify-hardening-complete.yml
cloudy/tasks/sys/docker/: add-user.yml  configure.yml  install-docker.yml  install.yml
cloudy/tasks/sys/etc/: git-commit.yml  git-init.yml
cloudy/tasks/sys/firewall/: allow-host-port.yml  allow-http.yml  allow-https.yml  allow-port-proto.yml  allow-port.yml  allow-postgresql.yml  disable.yml  disallow-host-port.yml  disallow-http.yml  disallow-https.yml  disallow-port-proto.yml  disallow-port.yml  disallow-postgresql.yml  install.yml  reload.yml  secure-server.yml  wide-open.yml
cloudy/tasks/sys/ports/: find-available-port.yml
cloudy/tasks/sys/python/: install-base.yml  install-common.yml  install-image-libs.yml  install-psycopg2.yml  install-system-packages.yml
cloudy/tasks/sys/redis/: configure-interface.yml  configure-memory.yml  configure-password.yml  configure-port.yml  install.yml
cloudy/tasks/sys/ssh/: enable-root-login.yml  (+8 more)
cloudy/templates/: apache2-envvars.j2  apache2-ports.conf.j2  apache2-site.conf.j2  apache2.conf.j2  nginx-loadbalancer.conf.j2  nginx-mime.types.j2  nginx-site-http.conf.j2  nginx-site-https.conf.j2  nginx.conf.j2  openvpn-docker-systemd.service.j2  pgbouncer-default.j2  pgbouncer.ini.j2  supervisor-site.conf.j2  supervisord.conf.j2
cloudy/tests/: test-playbooks.yml
cloudy/util/: __init__.py  common.py  conf.py  context.py
cloudy/web/: __init__.py  apache.py  geoip.py  nginx.py  supervisor.py  www.py
dev/: .ansible-lint.yml  .cspell.json  README.md  syntax-check.sh  test-auth.yml  validate.py
dev/ali/: README.md  __init__.py  ali.py
tests/: __init__.py  test_minimal.py  test_runner.py
(+26 files in other folders)
